# simple_shell

./: AUTHORS.md  CMakeLists.txt  README.md  builtins.c  builtins_help_1.c  builtins_help_2.c  divide.c  enviro.c  enviro_builtins.c  errors.c  errors_msg_1.c  errors_msg_2.c  file_commands.c  getline.c  helper.c  helpers_2.c  hsh  input_helpers.c  linkedlist.c  locate.c  main.c  origbuiltin.c  shell.h  str_func1.c  str_funct.c
